--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ img {
     width: 30rem;
 }
 
+#main_title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+}
+
 .center {
     display: flex;
     justify-content: center;
